force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/Exemption_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exemption_Reason__c</fullName>
    <label>Exemption Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A - Capital Improvement</fullName>
                <default>true</default>
                <label>A - Capital Improvement</label>
            </value>
            <value>
                <fullName>B - Building or Construction</fullName>
            </value>
            <value>
                <fullName>C - Manufacturing</fullName>
            </value>
            <value>
                <fullName>D - Farming</fullName>
            </value>
            <value>
                <fullName>E - Commercial Fishing</fullName>
            </value>
            <value>
                <fullName>F - Industrial</fullName>
            </value>
            <value>
                <fullName>G - Utility</fullName>
            </value>
            <value>
                <fullName>H - Promotional</fullName>
            </value>
            <value>
                <fullName>I - Residential</fullName>
            </value>
            <value>
                <fullName>J - Educational</fullName>
            </value>
            <value>
                <fullName>K - Government</fullName>
            </value>
            <value>
                <fullName>L - Religious</fullName>
            </value>
            <value>
                <fullName>M - Charitable</fullName>
            </value>
            <value>
                <fullName>N - Other</fullName>
            </value>
            <value>
                <fullName>O - Other A</fullName>
            </value>
            <value>
                <fullName>P - Other B</fullName>
            </value>
            <value>
                <fullName>Q - Tenant Lease Improvement</fullName>
            </value>
            <value>
                <fullName>R - Energy Storage Equipment</fullName>
            </value>
            <value>
                <fullName>S - Solar Equipment Installation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>