force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/Override_Tax_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Override_Tax_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Tax Exempt</label>
    <description>When checked, PO uses its own tax exempt values instead of inheriting from the Work Order. Unchecked = inherit from WO.</description>
    <type>Checkbox</type>
</CustomField>