force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/Prime_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Prime_Contract_Date__c</fullName>
    <label>Prime Contract Date</label>
    <type>Date</type>
</CustomField>