force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/Record_ID_URL__c.field-meta.xml
<CustomField>
    <fullName>Record_ID_URL__c</fullName>
    <label>Record ID URL</label>
    <type>Text</type>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>