force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/Vendor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Contact__c</fullName>
    <description>Contact associated with the vendor on this purchase order. Replaces individual Tax_Exempt_Contact_Name/Email fields. Ready for future automation use (PO email, tax forms).</description>
    <label>Vendor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Vendor_Contacts</relationshipName>
    <type>Lookup</type>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <value>AcctSeedERP__Vendor__c</value>
        </filterItems>
        <infoMessage>Select a contact associated with the selected vendor.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
</CustomField>